--- a/src/Components/App/NowPlaying/NowPlaying.css
+++ b/src/Components/App/NowPlaying/NowPlaying.css
@@ -28,4 +28,21 @@
   font-style: bold;
 }
 
+.device-ctn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: grey;
+  border-radius: 5px;
+  margin: 10px;
+  max-width: 500px;
+  height: 30px;
+}
+
+.audio-icon {
+  padding: 20px;
+}
+
 
